--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -6,22 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".create_account">
 
+    <Button
+        android:id="@+id/submit_btn"
+        android:layout_width="225dp"
+        android:layout_height="56dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/edit_round"
+        android:fontFamily="@font/viga"
+        android:text="Submit"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="641dp"
         android:layout_height="537dp"
         android:layout_marginStart="4dp"
-        android:layout_marginBottom="356dp"
+        android:layout_marginBottom="368dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/doctor" />
 
     <TextView
-        android:id="@+id/back"
+        android:id="@+id/backTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="688dp"
+        android:layout_marginBottom="704dp"
+        android:fontFamily="@font/viga"
         android:text="Back"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -33,7 +48,8 @@
         android:layout_width="226dp"
         android:layout_height="103dp"
         android:layout_marginEnd="168dp"
-        android:layout_marginBottom="572dp"
+        android:layout_marginBottom="580dp"
+        android:fontFamily="sans-serif"
         android:text="Create an Account"
         android:textColor="#000000"
         android:textSize="40sp"
@@ -45,53 +61,57 @@
         android:id="@+id/first_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="292dp"
-        android:layout_marginBottom="8dp"
+        android:fontFamily="sans-serif"
         android:text="First Name"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/first_nameBox"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/create_account" />
 
     <EditText
         android:id="@+id/first_nameBox"
-        android:layout_width="332dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="44dp"
+        android:layout_width="370dp"
+        android:layout_height="51dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/edittext3"
         android:ems="10"
+        android:hint= "First Name"
+        android:paddingStart="10dp"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/last_nameBox"
+        app:layout_constraintBottom_toTopOf="@+id/last_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.253"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_account"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/last_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="sans-serif"
         android:text="Last Name"
         android:textColor="#000000"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/last_nameBox"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.067"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/first_nameBox" />
+        app:layout_constraintHorizontal_bias="0.065"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/last_nameBox"
-        android:layout_width="332dp"
-        android:layout_height="53dp"
-        android:layout_marginBottom="48dp"
+        android:layout_width="370dp"
+        android:layout_height="51dp"
+        android:layout_marginBottom="9dp"
         android:background="@drawable/edittext3"
         android:ems="10"
+        android:hint="Last Name"
+        android:paddingStart="10dp"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/emailBox"
+        app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.265"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -99,85 +119,87 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="340dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="sans-serif"
         android:text="Email"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/emailBox"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/emailBox"
-        android:layout_width="332dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="35dp"
+        android:layout_width="370dp"
+        android:layout_height="51dp"
+        android:layout_marginBottom="7dp"
         android:background="@drawable/edittext3"
         android:ems="10"
+        android:hint="Email"
+        android:paddingStart="10dp"
         android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.265"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/email" />
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="240dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="sans-serif"
         android:text="Password"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/passwordBox"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/passwordBox"
-        android:layout_width="332dp"
-        android:layout_height="53dp"
-        android:layout_marginBottom="36dp"
+        android:layout_width="371dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/edittext3"
         android:ems="10"
-        android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toBottomOf="@+id/password2"
+        android:hint="Password"
+        android:paddingStart="10dp"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.265"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/confirm_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="11dp"
+        android:fontFamily="sans-serif"
+        android:text="Confirm Password"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/confimpassword"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/confimpassword"
-        android:layout_width="332dp"
-        android:layout_height="53dp"
-        android:layout_marginBottom="28dp"
+        android:layout_width="371dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="23dp"
         android:background="@drawable/edittext3"
         android:ems="10"
-        android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/btnSign"
+        android:hint="Confirm Password"
+        android:paddingStart="10dp"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.265"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/password2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="144dp"
-        android:text="Confirm Password"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btnSign"
-        android:layout_width="135dp"
-        android:layout_height="45dp"
-        android:text="Submit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.896" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
