--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,33 +6,79 @@
     android:layout_height="match_parent"
     tools:context=".forgot_password">
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="751dp"
-        android:layout_height="192dp"
-        android:layout_marginBottom="580dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:srcCompat="@drawable/background"
-        tools:layout_editor_absoluteX="-170dp" />
-
-    <TextView
-        android:id="@+id/forgot_password1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/submitbtn"
+        android:layout_width="225dp"
+        android:layout_height="56dp"
         android:layout_marginEnd="92dp"
-        android:layout_marginBottom="44dp"
-        android:text="Forgot Password"
-        android:textColor="#FDFDFD"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+        android:layout_marginBottom="124dp"
+        android:background="@drawable/edit_round"
+        android:fontFamily="@font/viga"
+        android:text="Submit"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="994dp"
-        android:layout_height="591dp"
-        android:layout_marginBottom="148dp"
+        android:id="@+id/lock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="228dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:srcCompat="@drawable/lock"
-        tools:layout_editor_absoluteX="-292dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/lockkkk" />
+
+    <ImageView
+        android:id="@+id/redBackground"
+        android:layout_width="522dp"
+        android:layout_height="281dp"
+        android:layout_marginBottom="588dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/background" />
+
+
+    <EditText
+        android:id="@+id/txtbox_email"
+        android:layout_width="374dp"
+        android:layout_height="59dp"
+        android:layout_marginBottom="104dp"
+        android:background="@drawable/edittext3"
+        android:ems="10"
+        android:hint="Email"
+        android:paddingStart="10dp"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toBottomOf="@+id/submitbtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/forgotPasswordView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="372dp"
+        android:text="Forgot Password"
+        android:textColor="#FFFFFF"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toTopOf="@+id/txtbox_email"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="24dp"
+        android:text="Email"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/txtbox_email"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
