--- a/app/src/main/res/layout/activity_health_measurements.xml
+++ b/app/src/main/res/layout/activity_health_measurements.xml
@@ -43,8 +43,8 @@
         android:id="@+id/blood_pressure_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="412dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="416dp"
         android:text="Blood Pressure"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -55,8 +55,8 @@
         android:id="@+id/cholesterol_levels_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="368dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="372dp"
         android:text="Cholesterol Levels"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -67,8 +67,8 @@
         android:id="@+id/blood_sugar_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="320dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="324dp"
         android:text="Blood Sugar Level"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -79,8 +79,8 @@
         android:id="@+id/body_temperature_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="272dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="276dp"
         android:text="Body Temperature"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -91,8 +91,8 @@
         android:id="@+id/heart_rate_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="224dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="232dp"
         android:text="Heart Rate"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -103,8 +103,8 @@
         android:id="@+id/pulse_rate_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="176dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="192dp"
         android:text="Pulse Rate"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -115,35 +115,110 @@
         android:id="@+id/hours_of_sleep"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="132dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="152dp"
         android:text="Hours of Sleep"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="422dp"
-        android:layout_height="5dp"
-        android:layout_marginBottom="96dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageButton
+        android:id="@+id/bloodPressure_button"
+        android:layout_width="42dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="352dp"
+        android:layout_marginTop="132dp"
+        android:backgroundTint="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/line" />
+        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
+        app:srcCompat="@drawable/arrow_next" />
+
+    <ImageButton
+        android:id="@+id/cholesterol_button"
+        android:layout_width="42dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="352dp"
+        android:layout_marginTop="180dp"
+        android:backgroundTint="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
+        app:srcCompat="@drawable/arrow_next" />
+
+    <ImageButton
+        android:id="@+id/bloodSugar_button"
+        android:layout_width="42dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="352dp"
+        android:layout_marginTop="228dp"
+        android:backgroundTint="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
+        app:srcCompat="@drawable/arrow_next" />
+
+    <ImageButton
+        android:id="@+id/temperature_button"
+        android:layout_width="42dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="352dp"
+        android:layout_marginTop="276dp"
+        android:backgroundTint="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
+        app:srcCompat="@drawable/arrow_next" />
+
+    <ImageButton
+        android:id="@+id/heartRate_button"
+        android:layout_width="42dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="352dp"
+        android:layout_marginTop="324dp"
+        android:backgroundTint="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
+        app:srcCompat="@drawable/arrow_next" />
+
+    <ImageButton
+        android:id="@+id/pulseRate_button"
+        android:layout_width="42dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="352dp"
+        android:layout_marginTop="364dp"
+        android:backgroundTint="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
+        app:srcCompat="@drawable/arrow_next" />
+
+    <ImageButton
+        android:id="@+id/sleep_button"
+        android:layout_width="42dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="352dp"
+        android:layout_marginTop="404dp"
+        android:backgroundTint="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
+        app:srcCompat="@drawable/arrow_next" />
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="2dp"
+        android:layout_marginBottom="100dp"
+        android:background="#E73927"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/imageHomeButton"
         android:layout_width="56dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="40dp"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/home" />
 
     <ImageButton
@@ -151,10 +226,10 @@
         android:layout_width="56dp"
         android:layout_height="51dp"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/textViewToday"
         app:layout_constraintStart_toEndOf="@+id/imageHomeButton"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
         app:srcCompat="@drawable/calendarr" />
 
     <ImageButton
@@ -162,27 +237,21 @@
         android:layout_width="66dp"
         android:layout_height="61dp"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="13dp"
         android:layout_marginBottom="32dp"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageTodayButton"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/history" />
 
     <ImageButton
         android:id="@+id/imageUserButton"
         android:layout_width="56dp"
         android:layout_height="51dp"
-        android:layout_marginStart="336dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="332dp"
+        android:layout_marginBottom="40dp"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/user" />
 
     <TextView
@@ -233,81 +302,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="42dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="352dp"
-        android:layout_marginTop="128dp"
-        android:backgroundTint="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
-        app:srcCompat="@drawable/arrow_next" />
 
     <ImageButton
-        android:id="@+id/imageButton9"
-        android:layout_width="42dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="352dp"
-        android:layout_marginTop="180dp"
-        android:backgroundTint="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
-        app:srcCompat="@drawable/arrow_next" />
-
-    <ImageButton
-        android:id="@+id/imageButton10"
-        android:layout_width="42dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="352dp"
-        android:layout_marginTop="228dp"
-        android:backgroundTint="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
-        app:srcCompat="@drawable/arrow_next" />
-
-    <ImageButton
-        android:id="@+id/imageButton11"
-        android:layout_width="42dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="352dp"
-        android:layout_marginTop="276dp"
-        android:backgroundTint="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
-        app:srcCompat="@drawable/arrow_next" />
-
-    <ImageButton
-        android:id="@+id/imageButton12"
-        android:layout_width="42dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="352dp"
-        android:layout_marginTop="324dp"
-        android:backgroundTint="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
-        app:srcCompat="@drawable/arrow_next" />
-
-    <ImageButton
-        android:id="@+id/imageButton13"
-        android:layout_width="42dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="352dp"
-        android:layout_marginTop="372dp"
-        android:backgroundTint="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
-        app:srcCompat="@drawable/arrow_next" />
-
-    <ImageButton
-        android:id="@+id/imageButton14"
-        android:layout_width="42dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="352dp"
-        android:layout_marginTop="416dp"
-        android:backgroundTint="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/redBackground4"
-        app:srcCompat="@drawable/arrow_next" />
-
+        android:id="@+id/imageBack2"
+        android:layout_width="64dp"
+        android:layout_height="68dp"
+        android:layout_marginEnd="360dp"
+        android:layout_marginBottom="696dp"
+        android:backgroundTint="#E73927"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/backarrow" />
 </androidx.constraintlayout.widget.ConstraintLayout>
