--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="672dp"
-        android:fontFamily="@font/montserrat_subrayada"
+        android:fontFamily="@font/viga"
         android:text="Welcome, name"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
@@ -68,27 +68,25 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="422dp"
-        android:layout_height="5dp"
-        android:layout_marginBottom="96dp"
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="2dp"
+        android:layout_marginBottom="100dp"
+        android:background="#E73927"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/line" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/imageHomeButton"
         android:layout_width="56dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="40dp"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/home" />
 
     <ImageButton
@@ -96,10 +94,10 @@
         android:layout_width="56dp"
         android:layout_height="51dp"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/textViewToday"
         app:layout_constraintStart_toEndOf="@+id/imageHomeButton"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
         app:srcCompat="@drawable/calendarr" />
 
     <ImageButton
@@ -107,27 +105,21 @@
         android:layout_width="66dp"
         android:layout_height="61dp"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="13dp"
         android:layout_marginBottom="32dp"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageTodayButton"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/history" />
 
     <ImageButton
         android:id="@+id/imageUserButton"
         android:layout_width="56dp"
         android:layout_height="51dp"
-        android:layout_marginStart="336dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="332dp"
+        android:layout_marginBottom="40dp"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/user" />
 
     <TextView
