--- a/app/src/main/res/layout/activity_instruction_slideone.xml
+++ b/app/src/main/res/layout/activity_instruction_slideone.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="328dp"
-        android:fontFamily="@font/anaheim"
+        android:fontFamily="sans-serif"
         android:text="Alert System"
         android:textColor="#000000"
         android:textSize="26sp"
