--- a/app/src/main/res/layout/activity_instruction_slidethree.xml
+++ b/app/src/main/res/layout/activity_instruction_slidethree.xml
@@ -20,14 +20,14 @@
         android:id="@+id/tts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="124dp"
         android:layout_marginBottom="328dp"
-        android:fontFamily="@font/anaheim"
+        android:fontFamily="sans-serif"
         android:text="Text-to-Speech"
         android:textColor="#000000"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
