--- a/app/src/main/res/layout/activity_instruction_slidetwo.xml
+++ b/app/src/main/res/layout/activity_instruction_slidetwo.xml
@@ -19,14 +19,14 @@
         android:id="@+id/ocr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
         android:layout_marginBottom="324dp"
-        android:fontFamily="@font/anaheim"
+        android:fontFamily="sans-serif"
         android:text="Optical Character Recognition"
         android:textColor="#000000"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
