--- a/app/src/main/res/layout/activity_intake_confirmation.xml
+++ b/app/src/main/res/layout/activity_intake_confirmation.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/medicineName_txt"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".intake_confirmation">
@@ -20,7 +19,7 @@
         app:srcCompat="@drawable/background" />
 
     <TextView
-        android:id="@+id/newMeasurements"
+        android:id="@+id/userInformation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="668dp"
@@ -33,7 +32,6 @@
 
 
     <TextView
-        android:id="@+id/bloodPressure_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -41,17 +39,26 @@
         android:text="Name of Medicine"
         android:textColor="#000000"
         android:textSize="32sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="2dp"
+        android:layout_marginBottom="504dp"
+        android:background="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/time_txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="488dp"
+        android:layout_marginBottom="456dp"
         android:text="Time"
         android:textColor="#000000"
         android:textSize="22sp"
@@ -62,11 +69,69 @@
         android:id="@+id/imageButton3"
         android:layout_width="64dp"
         android:layout_height="61dp"
-        android:layout_marginStart="272dp"
+        android:layout_marginEnd="52dp"
         android:layout_marginBottom="580dp"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/bloodPressure_txt"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/tts" />
+
+    <ImageButton
+        android:id="@+id/imageBack5"
+        android:layout_width="64dp"
+        android:layout_height="68dp"
+        android:layout_marginEnd="356dp"
+        android:layout_marginBottom="112dp"
+        android:backgroundTint="#E73927"
+        app:layout_constraintBottom_toBottomOf="@+id/redBackground4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/backarrow" />
+
+    <Button
+        android:id="@+id/confirm_btn"
+        android:layout_width="128dp"
+        android:layout_height="106dp"
+        android:layout_marginStart="123dp"
+        android:layout_marginBottom="44dp"
+        android:background="@drawable/edit_skip"
+        android:fontFamily="@font/viga"
+        android:text="Confirm"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/skip_btn" />
+
+    <Button
+        android:id="@+id/skip_btn"
+        android:layout_width="128dp"
+        android:layout_height="106dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="44dp"
+        android:background="@drawable/edit_skip"
+        android:fontFamily="@font/viga"
+        android:text="Skip"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="115dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="388dp"
+        app:cardBackgroundColor="#FDCB00"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="139dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="528dp"
+        app:cardBackgroundColor="#FDCB00"
+        app:cardCornerRadius="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
