--- a/app/src/main/res/layout/activity_new_measurements.xml
+++ b/app/src/main/res/layout/activity_new_measurements.xml
@@ -19,7 +19,6 @@
         app:srcCompat="@drawable/background" />
 
     <TextView
-        android:id="@+id/newMeasurements"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="668dp"
@@ -32,7 +31,7 @@
 
 
     <TextView
-        android:id="@+id/bloodPressure_txt"
+        android:id="@+id/bloodPressureView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -51,6 +50,7 @@
         android:layout_marginBottom="580dp"
         android:background="@drawable/edittext3"
         android:ems="10"
+        android:paddingStart="10dp"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -69,7 +69,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/timeBtn"
+        android:id="@+id/timeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -97,12 +97,12 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
-        android:id="@+id/frequency_spinner3"
+        android:id="@+id/frequency_spinner_four"
         android:layout_width="143dp"
         android:layout_height="54dp"
         android:layout_marginEnd="252dp"
         android:layout_marginBottom="328dp"
-        android:background="@drawable/edittext3"
+        android:backgroundTint="#FDCB00"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -119,7 +119,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/start_btn3"
+        android:id="@+id/startButton_one"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -129,13 +129,14 @@
         android:background="@drawable/edittext3"
         android:drawableStart="@drawable/ic_calendar"
         android:text="Start"
+        android:paddingLeft="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/end_btn3"
+        android:id="@+id/endButton_one"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
@@ -145,13 +146,14 @@
         android:background="@drawable/edittext3"
         android:drawableStart="@drawable/ic_calendar"
         android:text="End"
+        android:paddingLeft="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/add_reminder_btn"
-        app:layout_constraintStart_toEndOf="@+id/start_btn3" />
+        app:layout_constraintBottom_toTopOf="@+id/save_changes_button"
+        app:layout_constraintStart_toEndOf="@+id/startButton_one" />
 
     <Button
-        android:id="@+id/add_reminder_btn"
+        android:id="@+id/save_changes_button"
         android:layout_width="247dp"
         android:layout_height="49dp"
         android:layout_marginBottom="108dp"
@@ -160,14 +162,14 @@
         android:text="Save"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/cancel_btn"
+        android:id="@+id/cancel"
         android:layout_width="247dp"
         android:layout_height="49dp"
         android:layout_marginBottom="36dp"
@@ -176,10 +178,21 @@
         android:text="Cancel"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imageBack1"
+        android:layout_width="64dp"
+        android:layout_height="68dp"
+        android:layout_marginEnd="356dp"
+        android:layout_marginBottom="68dp"
+        android:backgroundTint="#E73927"
+        app:layout_constraintBottom_toTopOf="@+id/bloodPressure_Box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/backarrow" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
