--- a/app/src/main/res/layout/activity_recover.xml
+++ b/app/src/main/res/layout/activity_recover.xml
@@ -57,6 +57,8 @@
         android:layout_marginBottom="13dp"
         android:background="@drawable/edittext3"
         android:ems="10"
+        android:hint= "Enter New Password"
+        android:paddingStart="10dp"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/confirmPass"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,6 +84,8 @@
         android:layout_marginBottom="36dp"
         android:background="@drawable/edittext3"
         android:ems="10"
+        android:hint= "Confirm Password"
+        android:paddingStart="10dp"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/submitbtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +102,7 @@
         android:fontFamily="@font/viga"
         android:text="Submit"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="20sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
